// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixtures > 0 1`] = `
"
0|0|0|0|0|0|0
0|0|0|0|0|0|0
+|0|0|0|0|0|0
+|-|0|0|0|0|0
+|-|0|0|0|0|0
+|-|0|0|0|0|0

------------------------------------------------------------
STATUS:  | (+) RED WINS,
         | Vertical(2,0 -> 3,0 -> 4,0 -> 5,0);
------------------------------------------------------------
HISTORY: | (7) Array<
         |  +,-,+,-,+,-,+
         | >;
"
`;

exports[`fixtures > 1 1`] = `
"
0|0|0|0|0|0|0
0|0|0|0|0|0|0
0|+|0|0|0|0|0
0|+|-|0|0|0|0
0|+|-|0|0|0|0
0|+|-|0|0|0|0

------------------------------------------------------------
STATUS:  | (+) RED WINS,
         | Vertical(2,1 -> 3,1 -> 4,1 -> 5,1);
------------------------------------------------------------
HISTORY: | (7) Array<
         |  +,-,+,-,+,-,+
         | >;
"
`;

exports[`fixtures > 2 1`] = `
"
0|0|0|0|0|0|0
0|0|0|0|0|0|0
0|0|+|0|0|0|0
0|0|+|-|0|0|0
0|0|+|-|0|0|0
0|0|+|-|0|0|0

------------------------------------------------------------
STATUS:  | (+) RED WINS,
         | Vertical(2,2 -> 3,2 -> 4,2 -> 5,2);
------------------------------------------------------------
HISTORY: | (7) Array<
         |  +,-,+,-,+,-,+
         | >;
"
`;

exports[`fixtures > 3 1`] = `
"
0|0|0|0|0|0|0
0|0|0|0|0|0|0
0|0|0|+|0|0|0
0|0|0|+|-|0|0
0|0|0|+|-|0|0
0|0|0|+|-|0|0

------------------------------------------------------------
STATUS:  | (+) RED WINS,
         | Vertical(2,3 -> 3,3 -> 4,3 -> 5,3);
------------------------------------------------------------
HISTORY: | (7) Array<
         |  +,-,+,-,+,-,+
         | >;
"
`;

exports[`fixtures > 4 1`] = `
"
0|0|0|0|0|0|0
0|0|0|0|0|0|0
0|0|0|0|+|0|0
0|0|0|0|+|-|0
0|0|0|0|+|-|0
0|0|0|0|+|-|0

------------------------------------------------------------
STATUS:  | (+) RED WINS,
         | Vertical(2,4 -> 3,4 -> 4,4 -> 5,4);
------------------------------------------------------------
HISTORY: | (7) Array<
         |  +,-,+,-,+,-,+
         | >;
"
`;

exports[`fixtures > 5 1`] = `
"
0|0|0|0|0|0|0
0|0|0|0|0|0|0
0|0|0|0|0|+|0
0|0|0|0|0|+|-
0|0|0|0|0|+|-
0|0|0|0|0|+|-

------------------------------------------------------------
STATUS:  | (+) RED WINS,
         | Vertical(2,5 -> 3,5 -> 4,5 -> 5,5);
------------------------------------------------------------
HISTORY: | (7) Array<
         |  +,-,+,-,+,-,+
         | >;
"
`;

exports[`fixtures > 6 1`] = `
"
0|0|0|0|0|0|0
0|0|0|0|0|0|0
0|0|0|0|0|0|+
-|0|0|0|0|0|+
-|0|0|0|0|0|+
-|0|0|0|0|0|+

------------------------------------------------------------
STATUS:  | (+) RED WINS,
         | Vertical(2,6 -> 3,6 -> 4,6 -> 5,6);
------------------------------------------------------------
HISTORY: | (7) Array<
         |  +,-,+,-,+,-,+
         | >;
"
`;

exports[`fixtures > 7 1`] = `
"
0|0|0|0|0|0|0
0|0|0|0|0|0|0
-|0|0|0|0|0|0
+|-|+|-|+|-|+
-|+|-|+|-|+|-
+|-|+|-|+|-|+

------------------------------------------------------------
STATUS:  | (-) YELLOW WINS,
         | LeadDiagonal(2,0 -> 3,1 -> 4,2 -> 5,3);
------------------------------------------------------------
HISTORY: | (22) Array<
         |  +,-,+,-,+,-,+,-,+,-,
         |  +,-,+,-,+,-,+,-,+,-,
         |  +,-
         | >;
"
`;

exports[`fixtures > 8 1`] = `
"
0|0|0|0|0|0|0
0|0|0|0|0|0|0
0|0|0|0|0|0|-
+|-|+|-|+|-|+
-|+|-|+|-|+|-
+|-|+|-|+|-|+

------------------------------------------------------------
STATUS:  | (-) YELLOW WINS,
         | CounterDiagonal(2,6 -> 3,5 -> 4,4 -> 5,3);
------------------------------------------------------------
HISTORY: | (22) Array<
         |  +,-,+,-,+,-,+,-,+,-,
         |  +,-,+,-,+,-,+,-,+,-,
         |  +,-
         | >;
"
`;

exports[`fixtures > 9 1`] = `
"
0|0|0|0|0|0|0
0|0|0|0|0|0|0
0|0|0|0|0|0|0
0|0|0|0|0|0|0
-|-|-|0|0|0|0
+|+|+|+|0|0|0

------------------------------------------------------------
STATUS:  | (+) RED WINS,
         | Horizontal(5,0 -> 5,1 -> 5,2 -> 5,3);
------------------------------------------------------------
HISTORY: | (7) Array<
         |  +,-,+,-,+,-,+
         | >;
"
`;

exports[`fixtures > 10 1`] = `
"
0|0|0|0|0|0|0
0|0|0|0|0|0|0
0|0|0|0|0|0|0
0|0|0|0|0|0|0
0|0|0|0|-|-|-
0|0|0|+|+|+|+

------------------------------------------------------------
STATUS:  | (+) RED WINS,
         | Horizontal(5,3 -> 5,4 -> 5,5 -> 5,6);
------------------------------------------------------------
HISTORY: | (7) Array<
         |  +,-,+,-,+,-,+
         | >;
"
`;

exports[`fixtures > 11 1`] = `
"
0|0|0|0|0|0|0
0|0|0|0|0|0|0
0|0|0|0|0|0|-
+|-|+|-|+|-|+
-|+|-|+|-|+|-
+|-|+|-|+|-|+

------------------------------------------------------------
STATUS:  | (-) YELLOW WINS,
         | CounterDiagonal(2,6 -> 3,5 -> 4,4 -> 5,3);
------------------------------------------------------------
HISTORY: | (22) Array<
         |  +,-,+,-,+,-,+,-,+,-,
         |  +,-,+,-,+,-,+,-,+,-,
         |  +,-
         | >;
"
`;

exports[`fixtures > 12 1`] = `
"
0|0|0|0|0|0|0
0|0|0|0|0|0|0
-|0|0|0|0|0|0
+|-|+|-|+|-|+
-|+|-|+|-|+|-
+|-|+|-|+|-|+

------------------------------------------------------------
STATUS:  | (-) YELLOW WINS,
         | LeadDiagonal(2,0 -> 3,1 -> 4,2 -> 5,3);
------------------------------------------------------------
HISTORY: | (22) Array<
         |  +,-,+,-,+,-,+,-,+,-,
         |  +,-,+,-,+,-,+,-,+,-,
         |  +,-
         | >;
"
`;

exports[`fixtures > 13 1`] = `
"
0|0|0|0|0|0|0
0|0|0|0|0|0|0
0|0|0|0|0|0|0
0|0|0|0|0|0|0
-|-|-|0|0|0|0
+|+|+|+|0|0|0

------------------------------------------------------------
STATUS:  | (+) RED WINS,
         | Horizontal(5,0 -> 5,1 -> 5,2 -> 5,3);
------------------------------------------------------------
HISTORY: | (7) Array<
         |  +,-,+,-,+,-,+
         | >;
"
`;

exports[`fixtures > 14 1`] = `
"
0|0|0|0|0|0|0
0|0|0|0|0|0|0
0|0|0|0|0|0|0
0|0|0|0|0|0|0
0|0|0|0|-|-|-
0|0|0|+|+|+|+

------------------------------------------------------------
STATUS:  | (+) RED WINS,
         | Horizontal(5,3 -> 5,4 -> 5,5 -> 5,6);
------------------------------------------------------------
HISTORY: | (7) Array<
         |  +,-,+,-,+,-,+
         | >;
"
`;

exports[`fixtures > 15 1`] = `
"
0|0|0|0|0|0|0
0|0|0|0|0|0|0
0|0|0|0|0|0|-
+|-|+|-|+|-|+
-|+|-|+|-|+|-
+|-|+|-|+|-|+

------------------------------------------------------------
STATUS:  | (-) YELLOW WINS,
         | CounterDiagonal(2,6 -> 3,5 -> 4,4 -> 5,3);
------------------------------------------------------------
HISTORY: | (22) Array<
         |  +,-,+,-,+,-,+,-,+,-,
         |  +,-,+,-,+,-,+,-,+,-,
         |  +,-
         | >;
"
`;

exports[`fixtures > 16 1`] = `
"
0|0|0|0|0|0|0
0|0|0|0|0|0|0
-|0|0|0|0|0|0
+|-|+|-|+|-|+
-|+|-|+|-|+|-
+|-|+|-|+|-|+

------------------------------------------------------------
STATUS:  | (-) YELLOW WINS,
         | LeadDiagonal(2,0 -> 3,1 -> 4,2 -> 5,3);
------------------------------------------------------------
HISTORY: | (22) Array<
         |  +,-,+,-,+,-,+,-,+,-,
         |  +,-,+,-,+,-,+,-,+,-,
         |  +,-
         | >;
"
`;

exports[`fixtures > 17 1`] = `
"
0|0|0|0|0|0|0
0|0|0|0|0|0|0
0|0|0|0|0|0|0
0|0|0|0|0|0|0
-|-|-|0|0|0|0
+|+|+|+|0|0|0

------------------------------------------------------------
STATUS:  | (+) RED WINS,
         | Horizontal(5,0 -> 5,1 -> 5,2 -> 5,3);
------------------------------------------------------------
HISTORY: | (7) Array<
         |  +,-,+,-,+,-,+
         | >;
"
`;

exports[`fixtures > 18 1`] = `
"
0|0|0|0|0|0|0
0|0|0|0|0|0|0
0|0|0|0|0|0|0
0|0|0|0|0|0|0
0|0|0|0|-|-|-
0|0|0|+|+|+|+

------------------------------------------------------------
STATUS:  | (+) RED WINS,
         | Horizontal(5,3 -> 5,4 -> 5,5 -> 5,6);
------------------------------------------------------------
HISTORY: | (7) Array<
         |  +,-,+,-,+,-,+
         | >;
"
`;

exports[`fixtures > 19 1`] = `
"
0|0|0|0|0|0|0
0|0|0|0|0|0|0
0|0|0|0|0|0|-
+|-|+|-|+|-|+
-|+|-|+|-|+|-
+|-|+|-|+|-|+

------------------------------------------------------------
STATUS:  | (-) YELLOW WINS,
         | CounterDiagonal(2,6 -> 3,5 -> 4,4 -> 5,3);
------------------------------------------------------------
HISTORY: | (22) Array<
         |  +,-,+,-,+,-,+,-,+,-,
         |  +,-,+,-,+,-,+,-,+,-,
         |  +,-
         | >;
"
`;

exports[`fixtures > 20 1`] = `
"
0|0|0|0|0|0|0
0|0|0|0|0|0|0
-|0|0|0|0|0|0
+|-|+|-|+|-|+
-|+|-|+|-|+|-
+|-|+|-|+|-|+

------------------------------------------------------------
STATUS:  | (-) YELLOW WINS,
         | LeadDiagonal(2,0 -> 3,1 -> 4,2 -> 5,3);
------------------------------------------------------------
HISTORY: | (22) Array<
         |  +,-,+,-,+,-,+,-,+,-,
         |  +,-,+,-,+,-,+,-,+,-,
         |  +,-
         | >;
"
`;
